<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.testmovieapp.ui.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_24dp"
            android:paddingTop="@dimen/_56dp"
            android:paddingRight="@dimen/_24dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_150dp"
                android:layout_height="@dimen/_100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_12dp"
                android:src="@drawable/welcome" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="KotlinDroider"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <!--  Email Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_8dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textNoSuggestions|textEmailAddress"
                    android:text="@={model.login.fields.email}"
                    app:error="@{model.login.emailError}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:onFocus="@{model.getEmailOnFocusChangeListener()}" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--  Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_8dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:text="@={model.login.fields.password}"
                    app:error="@{model.login.passwordError}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtEmail"
                    app:onFocus="@{model.getPasswordOnFocusChangeListener()}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                android:layout_marginBottom="@dimen/_24dp"
                android:enabled="@{model.login.valid}"
                android:onClick="@{() -> model.onButtonClick()}"
                android:padding="@dimen/_12dp"
                android:text="@string/action_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>